--- a/IisGeoIP2blockModule.csproj
+++ b/IisGeoIP2blockModule.csproj
@@ -60,22 +60,24 @@
     <CodeAnalysisRuleSet />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MaxMind.Db, Version=2.0.0.0, Culture=neutral, PublicKeyToken=66afa4cc5ae853ac, processorArchitecture=MSIL">
+      <HintPath>packages\MaxMind.Db.2.4.0\lib\net45\MaxMind.Db.dll</HintPath>
+    </Reference>
+    <Reference Include="MaxMind.GeoIP2, Version=3.0.0.0, Culture=neutral, PublicKeyToken=66afa4cc5ae853ac, processorArchitecture=MSIL">
+      <HintPath>packages\MaxMind.GeoIP2.3.0.0\lib\net45\MaxMind.GeoIP2.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp">
       <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.Web.Administration, Version=7.9.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>%windir%\System32\inetsrv\Microsoft.Web.Administration.dll</HintPath>
-      <Private>False</Private>
+      <HintPath>lib\Microsoft.Web.Administration.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Web.Management, Version=7.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>%windir%\System32\inetsrv\Microsoft.Web.Management.dll</HintPath>
-      <Private>False</Private>
+    <Reference Include="Microsoft.Web.Management">
+      <HintPath>lib\Microsoft.Web.Management.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>bin\Release\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -106,46 +108,13 @@
     <Compile Include="GeoblockModuleService.cs" />
     <Compile Include="GeoblockModuleServiceProxy .cs" />
     <Compile Include="IPUtilities.cs" />
-    <Compile Include="MaxMind.Db\ArrayBuffer.cs" />
-    <Compile Include="MaxMind.Db\Buffer.cs" />
-    <Compile Include="MaxMind.Db\ByteArrayEqualityComparer.cs" />
-    <Compile Include="MaxMind.Db\CachedDictionary.cs" />
-    <Compile Include="MaxMind.Db\ConstructorAttribute.cs" />
-    <Compile Include="MaxMind.Db\Decoder.cs" />
-    <Compile Include="MaxMind.Db\DeserializationException.cs" />
-    <Compile Include="MaxMind.Db\DictionaryActivatorCreator.cs" />
-    <Compile Include="MaxMind.Db\GlobalSuppressions.cs" />
-    <Compile Include="MaxMind.Db\InjectableValues.cs" />
-    <Compile Include="MaxMind.Db\InjectAttribute.cs" />
-    <Compile Include="MaxMind.Db\InvalidDatabaseException.cs" />
-    <Compile Include="MaxMind.Db\ListActivatorCreator.cs" />
-    <Compile Include="MaxMind.Db\MemoryMapBuffer.cs" />
-    <Compile Include="MaxMind.Db\Metadata.cs" />
-    <Compile Include="MaxMind.Db\ParameterAttribute.cs" />
-    <Compile Include="MaxMind.Db\Reader.cs" />
-    <Compile Include="MaxMind.Db\ReflectionUtil.cs" />
-    <Compile Include="MaxMind.Db\TypeAcivatorCreator.cs" />
-    <Compile Include="MaxMind.GeoIP2\DatabaseReader.cs" />
-    <Compile Include="MaxMind.GeoIP2\Exceptions\AddressNotFoundException.cs" />
-    <Compile Include="MaxMind.GeoIP2\Exceptions\GeoIP2Exception.cs" />
-    <Compile Include="MaxMind.GeoIP2\Exceptions\PermissionRequiredException.cs" />
-    <Compile Include="MaxMind.GeoIP2\IGeoIP2DatabaseReader.cs" />
-    <Compile Include="MaxMind.GeoIP2\IGeoIP2Provider.cs" />
-    <Compile Include="MaxMind.GeoIP2\Model\Continent.cs" />
-    <Compile Include="MaxMind.GeoIP2\Model\Country.cs" />
-    <Compile Include="MaxMind.GeoIP2\Model\MaxMind.cs" />
-    <Compile Include="MaxMind.GeoIP2\Model\NamedEntity.cs" />
-    <Compile Include="MaxMind.GeoIP2\Model\RepresentedCountry.cs" />
-    <Compile Include="MaxMind.GeoIP2\Model\Traits.cs" />
-    <Compile Include="MaxMind.GeoIP2\Responses\AbstractCountryResponse.cs" />
-    <Compile Include="MaxMind.GeoIP2\Responses\AbstractResponse.cs" />
-    <Compile Include="MaxMind.GeoIP2\Responses\CountryResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoveExceptionRuleTaskList.cs" />
     <Compile Include="SortableBindingList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="IisGeoblockModule.snk" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="AddExceptionRuleForm.resx">
@@ -172,10 +141,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MaxMind.Db\Properties\" />
-    <Folder Include="MaxMind.GeoIP2\Properties\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
