--- a/IisGeoIP2blockModule.csproj
+++ b/IisGeoIP2blockModule.csproj
@@ -64,6 +64,7 @@
     <Reference Include="IPAddressRange, Version=3.2.0.0, Culture=neutral, PublicKeyToken=578e3c3d17e7c751, processorArchitecture=MSIL">
       <HintPath>packages\IPAddressRange.3.2.0\lib\net45\IPAddressRange.dll</HintPath>
       <EmbedInteropTypes>False</EmbedInteropTypes>
+	</Reference>
     <Reference Include="MaxMind.Db, Version=2.0.0.0, Culture=neutral, PublicKeyToken=66afa4cc5ae853ac, processorArchitecture=MSIL">
       <HintPath>packages\MaxMind.Db.2.4.0\lib\net45\MaxMind.Db.dll</HintPath>
     </Reference>
